@@ -154,7 +154,6 @@ public:
 	E_type
 	getED2( const size_t i2, const size_t j2 ) const;
 
-
 	/**
 	 * Whether or not position i is accessible for interaction in sequence 1
 	 * @param i the position of interest in sequence 1
@@ -172,6 +171,41 @@ public:
 	virtual
 	bool
 	isAccessible2( const size_t i ) const;
+
+
+	/**
+	 * Provides the ensemble energy (ES) of all intramolecular substructures
+	 * that can be formed within a given region of sequence 1 under the
+	 * assumption that the region is part of an (intermolecular) multiloop,
+	 * i.e. at least one base pair is formed by each substructure.
+	 *
+	 * If no structure can be formed within the region, E_INF is returned.
+	 *
+	 * @param i1 the start of the structured region of seq1
+	 * @param j1 the end of the structured region of seq1
+	 * @return the ES value for [i1,j1] or E_INF if no intramolecular
+	 *         structure can be formed
+	 */
+	virtual
+	E_type
+	getES1( const size_t i1, const size_t j1 ) const = 0;
+
+	/**
+	 * Provides the ensemble energy (ES) of all intramolecular substructures
+	 * that can be formed within a given region of sequence 2 under the
+	 * assumption that the region is part of an (intermolecular) multiloop,
+	 * i.e. at least one base pair is formed by each substructure.
+	 *
+	 * If no structure can be formed within the region, E_INF is returned.
+	 *
+	 * @param i2 the start of the structured region of seq2
+	 * @param j2 the end of the structured region of seq2
+	 * @return the ES value for [i2,j2] or E_INF if no intramolecular
+	 *         structure can be formed
+	 */
+	virtual
+	E_type
+	getES2( const size_t i2, const size_t j2 ) const = 0;
 
 	/**
 	 * Provides the duplex initiation energy.
